Fix: Remove hardcoded localhost URLs, use environment variables for CORS